# mlglance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  llms.txt  pyproject.toml
demo/: mlglance.tape
examples/: generate.py
mlglance/: __init__.py  cli.py  data.py  demo.py  metrics.py  plot.py  render.py  theme.py
tests/: test_cli.py  test_data.py  test_metrics.py  test_plot.py  test_render.py
